# ha-deskdot

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/deskdot/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml
custom_components/deskdot/translations/: en.json
custom_components/deskdot/www/: deskdot-card.js
